; ModuleID = '/home/carl/AnghaBench/vlc/src/config/extr_core.c_config_GetFloat.c'
source_filename = "/home/carl/AnghaBench/vlc/src/config/extr_core.c_config_GetFloat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { float }

@config_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @config_GetFloat(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca float, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call %struct.TYPE_5__* @config_FindConfig(i8* %5)
  store %struct.TYPE_5__* %6, %struct.TYPE_5__** %3, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = icmp ne %struct.TYPE_5__* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @IsConfigFloatType(i32 %13)
  %15 = call i32 @assert(i32 %14)
  %16 = call i32 @vlc_rwlock_rdlock(i32* @config_lock)
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load float, float* %19, align 4
  store float %20, float* %4, align 4
  %21 = call i32 @vlc_rwlock_unlock(i32* @config_lock)
  %22 = load float, float* %4, align 4
  ret float %22
}

declare dso_local %struct.TYPE_5__* @config_FindConfig(i8*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @IsConfigFloatType(i32) #1

declare dso_local i32 @vlc_rwlock_rdlock(i32*) #1

declare dso_local i32 @vlc_rwlock_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
